# medical-ocr

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: __init__.py  industry_comparison.py  industry_comparison_results.json  results.json  run_all.py  synthetic_documents.py  test_engine_fallback.py  test_extraction_accuracy.py  test_processing_speed.py
examples/: help.txt  sample-output.json  test-output.txt
medical_ocr/: classify.py  enhanced_ocr.py  extractor.py  filters.py  injury_medical_vocabulary.py  legal_medical_vocabulary.py  main.py  medical_text_refiner.py  models.py  ocr_config.py  pipeline.py  qc.py  sections.py  summary.py  timeline.py  utils.py
src/: enhanced_ocr.py  export_md.py  extractor.py  filters.py  main.py  medical_text_refiner.py  models.py  ocr_config.py  qc.py  summary.py  timeline.py  utils.py
src/medical_ocr/: classify.py  config.py  enhanced_ocr.py  entities.py  export_docx.py  export_md.py  extractor.py  filters.py  ingest.py  injury_medical_vocabulary.py  legal_medical_vocabulary.py  llm.py  main.py  medical_text_refiner.py  ocr_config.py  parser_patient_details.py  parser_prescription.py  pipeline.py  qc.py  sections.py  summary.py  timeline.py  utils.py
tests/: test_filters.py
