[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medical-ocr"
version = "0.2.0"
description = "Medical document OCR pipeline: extract, structure, and export text from medical/legal PDFs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ocr", "medical", "pdf", "tesseract", "document-processing"]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "openai>=1.0.0",
    "pytesseract>=0.3.13",
    "Pillow>=10.0.0",
    "pdf2image>=1.17.0",
    "python-docx>=1.1.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]
gpu = ["easyocr>=1.7.0", "opencv-python>=4.6.0", "scikit-image>=0.24.0"]
gcp = ["google-cloud-vision>=3.7.0"]
pdf = ["PyPDF2>=3.0.0"]
anthropic = ["anthropic>=0.39.0"]
litellm = ["litellm>=1.50.0"]

[project.scripts]
medical-ocr = "medical_ocr.main:main"
medical-ocr-api = "medical_ocr.pipeline:run_api"

[tool.hatch.build.targets.wheel]
packages = ["src/medical_ocr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.urls]
Repository = "https://github.com/nometria/medical-ocr"
